# Discarder

./: Discarder.xctestplan  README.md
Discarder/: ContentView.swift  DiscarderApp.swift
Discarder.xcodeproj/: project.pbxproj
Discarder.xcodeproj/xcshareddata/xcschemes/: Discarder.xcscheme
Discarder/Assets.xcassets/card_back.imageset/: Contents.json
Discarder/Assets.xcassets/card_clubs_02.imageset/: Contents.json
Discarder/Assets.xcassets/card_clubs_03.imageset/: Contents.json
Discarder/Assets.xcassets/card_clubs_04.imageset/: Contents.json
Discarder/Assets.xcassets/card_clubs_05.imageset/: Contents.json
Discarder/DiscarderKit/: Package.resolved  Package.swift
Discarder/DiscarderKit/Sources/RustCore/: Cargo.toml  build.sh  cbindgen.toml  rustfmt.toml
Discarder/DiscarderKit/Sources/RustCore/include/: module.modulemap  rust_core.h
Discarder/DiscarderKit/Sources/RustCore/src/: lib.rs  utils.rs
Discarder/DiscarderKit/Sources/RustCore/src/api/: mod.rs
Discarder/DiscarderKit/Sources/RustCore/src/deck/: card.rs  deck.rs  mod.rs  rank.rs  suit.rs
Discarder/DiscarderKit/Sources/RustCore/src/discarder/: algorithm.rs  mod.rs
Discarder/DiscarderKit/Sources/RustCore/src/montecarlo/: config.rs  message.rs  mod.rs  tests.rs  thread.rs  traits.rs
Discarder/DiscarderKit/Sources/RustCore/src/poker/: mod.rs  poker_hand.rs  poker_hand_resolver.rs  poker_hands_count.rs
Discarder/UI/: AllCardsView.swift  CardImage.swift  CardView.swift  ContentView.swift  DeckView.swift  HandSizePicker.swift  HandView.swift  MainViewModel.swift
(+68 files in other folders)
